<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".views.MainActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/info_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/my_cart"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medicines_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/medicine_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/purchase_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:text="@string/place_order"
            app:cornerRadius="14dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>